website/versioned_docs/0.31/debugging.md
---
id: version-0.31-debugging
title: debugging
original_id: debugging
---
<a id="content"></a><h1><a class="anchor" name="debugging"></a>Debugging <a class="hash-link" href="docs/debugging.html#debugging">#</a></h1><div><h2><a class="anchor" name="accessing-the-in-app-developer-menu"></a>Accessing the In-App Developer Menu <a class="hash-link" href="docs/debugging.html#accessing-the-in-app-developer-menu">#</a></h2><p>You can access the developer menu by shaking your device or by selecting "Shake Gesture" inside the Hardware menu in the iOS Simulator. You can also use the <strong><code>Command</code></strong><code>⌘</code> + <strong><code>D</code></strong> keyboard shortcut when your app is running in the iPhone Simulator, or <strong><code>Command</code></strong><code>⌘</code> + <strong><code>M</code></strong> when running in an Android emulator.</p><p><img src="img/DeveloperMenu.png" alt=""></p><blockquote><p>The Developer Menu is disabled in release (production) builds.</p></blockquote><h2><a class="anchor" name="reloading-javascript"></a>Reloading JavaScript <a class="hash-link" href="docs/debugging.html#reloading-javascript">#</a></h2><p>Instead of recompiling your app every time you make a change, you can reload your app's JavaScript code instantly. To do so, select "Reload" from the Developer Menu. You can also press <strong><code>Command</code></strong><code>⌘</code> + <strong><code>R</code></strong> in the iOS Simulator, or press <strong><code>R</code></strong> twice on Android emulators.</p><blockquote><p>If the <strong><code>Command</code></strong><code>⌘</code> + <strong><code>R</code></strong> keyboard shortcut does not seem to reload the iOS Simulator, go to the Hardware menu, select Keyboard, and make sure that "Connect Hardware Keyboard" is checked.</p></blockquote><h3><a class="anchor" name="automatic-reloading"></a>Automatic reloading <a class="hash-link" href="docs/debugging.html#automatic-reloading">#</a></h3><p>You can speed up your development times by having your app reload automatically any time your code changes. Automatic reloading can be enabled by selecting "Enable Live Reload" from the Developer Menu.</p><p>You may even go a step further and keep your app running as new versions of your files are injected into the JavaScript bundle automatically by enabling <a href="https://facebook.github.io/react-native/blog/2016/03/24/introducing-hot-reloading.html" target="_blank">Hot Reloading</a> from the Developer Menu. This will allow you to persist the app's state through reloads.</p><blockquote><p>There are some instances where hot reloading cannot be implemented perfectly. If you run into any issues, use a full reload to reset your app.</p></blockquote><p>You will need to rebuild your app for changes to take effect in certain situations:</p><ul><li>You have added new resources to your native app's bundle, such as an image in <code>Images.xcassets</code> on iOS or the <code>res/drawable</code> folder on Android.</li><li>You have modified native code (Objective-C/Swift on iOS or Java/C++ on Android).</li></ul><h2><a class="anchor" name="in-app-errors-and-warnings"></a>In-app Errors and Warnings <a class="hash-link" href="docs/debugging.html#in-app-errors-and-warnings">#</a></h2><p>Errors and warnings are displayed inside your app in development builds.</p><h3><a class="anchor" name="errors"></a>Errors <a class="hash-link" href="docs/debugging.html#errors">#</a></h3><p>In-app errors are displayed in a full screen alert with a red background inside your app. This screen is known as a RedBox. You can use <code>console.error()</code> to manually trigger one.</p><h3><a class="anchor" name="warnings"></a>Warnings <a class="hash-link" href="docs/debugging.html#warnings">#</a></h3><p>Warnings will be displayed on screen with a yellow background. These alerts are known as YellowBoxes. Click on the alerts to show more information or to dismiss them.</p><p>As with a RedBox, you can use <code>console.warn()</code> to trigger a YellowBox.</p><p>YellowBoxes can be disabled during development by using <code>console.disableYellowBox = true;</code>. Specific warnings can be ignored programmatically by setting an array of prefixes that should be ignored: <code>console.ignoredYellowBox = ['Warning: ...'];</code></p><blockquote><p>RedBoxes and YellowBoxes are automatically disabled in release (production) builds.</p></blockquote><h2><a class="anchor" name="accessing-console-logs"></a>Accessing console logs <a class="hash-link" href="docs/debugging.html#accessing-console-logs">#</a></h2><p>You can display the console logs for an iOS or Android app by using the following commands in a terminal while the app is running:</p><div class="prism language-javascript">$ react<span class="token operator">-</span>native log<span class="token operator">-</span>ios
$ react<span class="token operator">-</span>native log<span class="token operator">-</span>android</div><p>You may also access these through <code>Debug → Open System Log...</code> in the iOS Simulator or by running <code>adb logcat *:S ReactNative:V ReactNativeJS:V</code> in a terminal while an Android app is running on a device or emulator.</p><h2><a class="anchor" name="chrome-developer-tools"></a>Chrome Developer Tools <a class="hash-link" href="docs/debugging.html#chrome-developer-tools">#</a></h2><p>To debug the JavaScript code in Chrome, select "Debug JS Remotely" from the Developer Menu. This will open a new tab at <a href="http://localhost:8081/debugger-ui" target="_blank"></a><a href="http://localhost:8081/debugger-ui">http://localhost:8081/debugger-ui</a>.</p><p>Select <code>Tools → Developer Tools</code> from the Chrome Menu to open the <a href="https://developer.chrome.com/devtools" target="_blank">Developer Tools</a>. You may also access the DevTools using keyboard shortcuts (<strong><code>Command</code></strong><code>⌘</code> + <strong><code>Option</code></strong><code>⌥</code> + <strong><code>I</code></strong> on Mac, <strong><code>Ctrl</code></strong> + <strong><code>Shift</code></strong> + <strong><code>I</code></strong> on Windows). You may also want to enable <a href="http://stackoverflow.com/questions/2233339/javascript-is-there-a-way-to-get-chrome-to-break-on-all-errors/17324511#17324511" target="_blank">Pause On Caught Exceptions</a> for a better debugging experience.</p><blockquote><p>It is <a href="https://github.com/facebook/react-devtools/issues/229" target="_blank">currently not possible</a> to use the "React" tab in the Chrome Developer Tools to inspect app widgets. You can use Nuclide's "React Native Inspector" as a workaround.</p></blockquote><h3><a class="anchor" name="debugging-on-a-device-with-chrome-developer-tools"></a>Debugging on a device with Chrome Developer Tools <a class="hash-link" href="docs/debugging.html#debugging-on-a-device-with-chrome-developer-tools">#</a></h3><p>On iOS devices, open the file <a href="https://github.com/facebook/react-native/blob/master/Libraries/WebSocket/RCTWebSocketExecutor.m" target="_blank"><code>RCTWebSocketExecutor.m</code></a> and change "localhost" to the IP address of your computer, then select "Debug JS Remotely" from the Developer Menu.</p><p>On Android 5.0+ devices connected via USB, you can use the <a href="http://developer.android.com/tools/help/adb.html" target="_blank"><code>adb</code> command line tool</a> to setup port forwarding from the device to your computer:</p><p><code>adb reverse tcp:8081 tcp:8081</code></p><p>Alternatively, select "Dev Settings" from the Developer Menu, then update the "Debug server host for device" setting to match the IP address of your computer.</p><blockquote><p>If you run into any issues, it may be possible that one of your Chrome extensions is interacting in unexpected ways with the debugger. Try disabling all of your extensions and re-enabling them one-by-one until you find the problematic extension.</p></blockquote><h3><a class="anchor" name="debugging-using-a-custom-javascript-debugger"></a>Debugging using a custom JavaScript debugger <a class="hash-link" href="docs/debugging.html#debugging-using-a-custom-javascript-debugger">#</a></h3><p>To use a custom JavaScript debugger in place of Chrome Developer Tools, set the <code>REACT_DEBUGGER</code> environment variable to a command that will start your custom debugger. You can then select "Debug JS Remotely" from the Developer Menu to start debugging.</p><p>The debugger will receive a list of all project roots, separated by a space. For example, if you set <code>REACT_DEBUGGER="node /path/to/launchDebugger.js --port 2345 --type ReactNative"</code>, then the command <code>node /path/to/launchDebugger.js --port 2345 --type ReactNative /path/to/reactNative/app</code> will be used to start your debugger.</p><blockquote><p>Custom debugger commands executed this way should be short-lived processes, and they shouldn't produce more than 200 kilobytes of output.</p></blockquote><h3><a class="anchor" name="debugging-with-stetho-http-facebook-github-io-stetho-on-android"></a>Debugging with <a href="http://facebook.github.io/stetho/" target="_blank">Stetho</a> on Android <a class="hash-link" href="docs/debugging.html#debugging-with-stetho-http-facebook-github-io-stetho-on-android">#</a></h3><ol><li><p>In <code>android/app/build.gradle</code>, add these lines in the <code>dependencies</code> section:</p><div class="prism language-javascript">compile <span class="token string">'com.facebook.stetho:stetho:1.3.1'</span>
compile <span class="token string">'com.facebook.stetho:stetho-okhttp3:1.3.1'</span></div></li><li><p>In <code>android/app/src/main/java/com/{yourAppName}/MainApplication.java</code>, add the following imports: </p><div class="prism language-javascript">import com<span class="token punctuation">.</span>facebook<span class="token punctuation">.</span>react<span class="token punctuation">.</span>modules<span class="token punctuation">.</span>network<span class="token punctuation">.</span>ReactCookieJarContainer<span class="token punctuation">;</span>
import com<span class="token punctuation">.</span>facebook<span class="token punctuation">.</span>stetho<span class="token punctuation">.</span>Stetho<span class="token punctuation">;</span>
import okhttp3<span class="token punctuation">.</span>OkHttpClient<span class="token punctuation">;</span>
import com<span class="token punctuation">.</span>facebook<span class="token punctuation">.</span>react<span class="token punctuation">.</span>modules<span class="token punctuation">.</span>network<span class="token punctuation">.</span>OkHttpClientProvider<span class="token punctuation">;</span>
import com<span class="token punctuation">.</span>facebook<span class="token punctuation">.</span>stetho<span class="token punctuation">.</span>okhttp3<span class="token punctuation">.</span>StethoInterceptor<span class="token punctuation">;</span>
import java<span class="token punctuation">.</span>util<span class="token punctuation">.</span>concurrent<span class="token punctuation">.</span>TimeUnit<span class="token punctuation">;</span></div></li><li><p>In <code>android/app/src/main/java/com/{yourAppName}/MainApplication.java</code> add the function:</p><div class="prism language-javascript">public void <span class="token function">onCreate<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
      super<span class="token punctuation">.</span><span class="token function">onCreate<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
      Stetho<span class="token punctuation">.</span><span class="token function">initializeWithDefaults<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
      OkHttpClient client <span class="token operator">=</span> <span class="token keyword">new</span> <span class="token class-name">OkHttpClient<span class="token punctuation">.</span>Builder</span><span class="token punctuation">(</span><span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">connectTimeout<span class="token punctuation">(</span></span><span class="token number">0</span><span class="token punctuation">,</span> TimeUnit<span class="token punctuation">.</span>MILLISECONDS<span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">readTimeout<span class="token punctuation">(</span></span><span class="token number">0</span><span class="token punctuation">,</span> TimeUnit<span class="token punctuation">.</span>MILLISECONDS<span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">writeTimeout<span class="token punctuation">(</span></span><span class="token number">0</span><span class="token punctuation">,</span> TimeUnit<span class="token punctuation">.</span>MILLISECONDS<span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">cookieJar<span class="token punctuation">(</span></span><span class="token keyword">new</span> <span class="token class-name">ReactCookieJarContainer</span><span class="token punctuation">(</span><span class="token punctuation">)</span><span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">addNetworkInterceptor<span class="token punctuation">(</span></span><span class="token keyword">new</span> <span class="token class-name">StethoInterceptor</span><span class="token punctuation">(</span><span class="token punctuation">)</span><span class="token punctuation">)</span>
      <span class="token punctuation">.</span><span class="token function">build<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
      OkHttpClientProvider<span class="token punctuation">.</span><span class="token function">replaceOkHttpClient<span class="token punctuation">(</span></span>client<span class="token punctuation">)</span><span class="token punctuation">;</span>
<span class="token punctuation">}</span></div></li><li><p>Run  <code>react-native run-android</code></p></li><li><p>In a new chrome tab, open : <code>chrome://inspect</code>, click on 'Inspect device' (the one followed by "Powered by Stetho")</p></li></ol><h2><a class="anchor" name="performance-monitor"></a>Performance Monitor <a class="hash-link" href="docs/debugging.html#performance-monitor">#</a></h2><p>You can enable a performance overlay to help you debug performance problems by selecting "Perf Monitor" in the Developer Menu.</p></div><div class="docs-prevnext"><a class="docs-prev" href="docs/direct-manipulation.html#content">← Prev</a><a class="docs-next" href="docs/testing.html#content">Next →</a></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/Debugging.md">edit the content above on GitHub</a> and send us a pull request!</p><div class="survey"><div class="survey-image"></div><p>Recently, we have been working hard to make the documentation better based on your feedback. Your responses to this yes/no style survey will help us gauge whether we moved in the right direction with the improvements. Thank you!</p><center><a class="button" href="https://www.facebook.com/survey?oid=516954245168428">Take Survey</a></center></div>