website/versioned_docs/0.49/debugging.md
---
id: version-0.49-debugging
title: debugging
original_id: debugging
---
<a id="content"></a><h1><a class="anchor" name="debugging"></a>Debugging <a class="hash-link" href="docs/debugging.html#debugging">#</a></h1><div><h2><a class="anchor" name="enabling-keyboard-shortcuts"></a>Enabling Keyboard Shortcuts <a class="hash-link" href="docs/debugging.html#enabling-keyboard-shortcuts">#</a></h2><p>React Native supports a few keyboard shortcuts in the iOS Simulator. They are described below. To enable them, open the Hardware menu, select Keyboard, and make sure that "Connect Hardware Keyboard" is checked.</p><h2><a class="anchor" name="accessing-the-in-app-developer-menu"></a>Accessing the In-App Developer Menu <a class="hash-link" href="docs/debugging.html#accessing-the-in-app-developer-menu">#</a></h2><p>You can access the developer menu by shaking your device or by selecting "Shake Gesture" inside the Hardware menu in the iOS Simulator. You can also use the <code>⌘D</code> keyboard shortcut when your app is running in the iOS Simulator, or <code>⌘M</code> when running in an Android emulator.</p><p><img src="img/DeveloperMenu.png" alt=""></p><blockquote><p>The Developer Menu is disabled in release (production) builds.</p></blockquote><h2><a class="anchor" name="reloading-javascript"></a>Reloading JavaScript <a class="hash-link" href="docs/debugging.html#reloading-javascript">#</a></h2><p>Instead of recompiling your app every time you make a change, you can reload your app's JavaScript code instantly. To do so, select "Reload" from the Developer Menu. You can also press <code>⌘R</code> in the iOS Simulator, or tap <code>R</code> twice on Android emulators.</p><h3><a class="anchor" name="automatic-reloading"></a>Automatic reloading <a class="hash-link" href="docs/debugging.html#automatic-reloading">#</a></h3><p>You can speed up your development times by having your app reload automatically any time your code changes. Automatic reloading can be enabled by selecting "Enable Live Reload" from the Developer Menu.</p><p>You may even go a step further and keep your app running as new versions of your files are injected into the JavaScript bundle automatically by enabling <a href="https://facebook.github.io/react-native/blog/2016/03/24/introducing-hot-reloading.html" target="_blank">Hot Reloading</a> from the Developer Menu. This will allow you to persist the app's state through reloads.</p><blockquote><p>There are some instances where hot reloading cannot be implemented perfectly. If you run into any issues, use a full reload to reset your app.</p></blockquote><p>You will need to rebuild your app for changes to take effect in certain situations:</p><ul><li>You have added new resources to your native app's bundle, such as an image in <code>Images.xcassets</code> on iOS or the <code>res/drawable</code> folder on Android.</li><li>You have modified native code (Objective-C/Swift on iOS or Java/C++ on Android).</li></ul><h2><a class="anchor" name="in-app-errors-and-warnings"></a>In-app Errors and Warnings <a class="hash-link" href="docs/debugging.html#in-app-errors-and-warnings">#</a></h2><p>Errors and warnings are displayed inside your app in development builds.</p><h3><a class="anchor" name="errors"></a>Errors <a class="hash-link" href="docs/debugging.html#errors">#</a></h3><p>In-app errors are displayed in a full screen alert with a red background inside your app. This screen is known as a RedBox. You can use <code>console.error()</code> to manually trigger one.</p><h3><a class="anchor" name="warnings"></a>Warnings <a class="hash-link" href="docs/debugging.html#warnings">#</a></h3><p>Warnings will be displayed on screen with a yellow background. These alerts are known as YellowBoxes. Click on the alerts to show more information or to dismiss them.</p><p>As with a RedBox, you can use <code>console.warn()</code> to trigger a YellowBox.</p><p>YellowBoxes can be disabled during development by using <code>console.disableYellowBox = true;</code>. Specific warnings can be ignored programmatically by setting an array of prefixes that should be ignored: <code>console.ignoredYellowBox = ['Warning: ...'];</code>.</p><p>In CI/Xcode, YellowBoxes can also be disabled by setting the <code>IS_TESTING</code> environment variable.</p><blockquote><p>RedBoxes and YellowBoxes are automatically disabled in release (production) builds.</p></blockquote><h2><a class="anchor" name="chrome-developer-tools"></a>Chrome Developer Tools <a class="hash-link" href="docs/debugging.html#chrome-developer-tools">#</a></h2><p>To debug the JavaScript code in Chrome, select "Debug JS Remotely" from the Developer Menu. This will open a new tab at <a href="http://localhost:8081/debugger-ui" target="_blank"></a><a href="http://localhost:8081/debugger-ui">http://localhost:8081/debugger-ui</a>.</p><p>Select <code>Tools → Developer Tools</code> from the Chrome Menu to open the <a href="https://developer.chrome.com/devtools" target="_blank">Developer Tools</a>. You may also access the DevTools using keyboard shortcuts (<code>⌘⌥I</code> on macOS, <code>Ctrl</code> <code>Shift</code> <code>I</code> on Windows). You may also want to enable <a href="http://stackoverflow.com/questions/2233339/javascript-is-there-a-way-to-get-chrome-to-break-on-all-errors/17324511#17324511" target="_blank">Pause On Caught Exceptions</a> for a better debugging experience.</p><blockquote><p>Note: the React Developer Tools Chrome extension does not work with React Native, but you can use its standalone version instead. Read <a href="docs/debugging.html#react-developer-tools" target="_blank">this section</a> to learn how.</p></blockquote><h3><a class="anchor" name="debugging-using-a-custom-javascript-debugger"></a>Debugging using a custom JavaScript debugger <a class="hash-link" href="docs/debugging.html#debugging-using-a-custom-javascript-debugger">#</a></h3><p>To use a custom JavaScript debugger in place of Chrome Developer Tools, set the <code>REACT_DEBUGGER</code> environment variable to a command that will start your custom debugger. You can then select "Debug JS Remotely" from the Developer Menu to start debugging.</p><p>The debugger will receive a list of all project roots, separated by a space. For example, if you set <code>REACT_DEBUGGER="node /path/to/launchDebugger.js --port 2345 --type ReactNative"</code>, then the command <code>node /path/to/launchDebugger.js --port 2345 --type ReactNative /path/to/reactNative/app</code> will be used to start your debugger.</p><blockquote><p>Custom debugger commands executed this way should be short-lived processes, and they shouldn't produce more than 200 kilobytes of output.</p></blockquote><h2><a class="anchor" name="react-developer-tools"></a>React Developer Tools <a class="hash-link" href="docs/debugging.html#react-developer-tools">#</a></h2><p>You can use <a href="https://github.com/facebook/react-devtools/tree/master/packages/react-devtools" target="_blank">the standalone version of React Developer Tools</a> to debug the React component hierarchy. To use it, install the <code>react-devtools</code> package globally:</p><div class="prism language-javascript">npm install <span class="token operator">-</span>g react<span class="token operator">-</span>devtools</div><p>Now run <code>react-devtools</code> from the terminal to launch the standalone DevTools app:</p><div class="prism language-javascript">react<span class="token operator">-</span>devtools</div><p><img src="img/ReactDevTools.png" alt="React DevTools"></p><p>It should connect to your simulator within a few seconds.</p><blockquote><p>Note: if you prefer to avoid global installations, you can add <code>react-devtools</code> as a project dependency. Add the <code>react-devtools</code> package to your project using <code>npm install --save-dev react-devtools</code>, then add <code>"react-devtools": "react-devtools"</code> to the <code>scripts</code> section in your <code>package.json</code>, and then run <code>npm run react-devtools</code> from your project folder to open the DevTools.</p></blockquote><h3><a class="anchor" name="integration-with-react-native-inspector"></a>Integration with React Native Inspector <a class="hash-link" href="docs/debugging.html#integration-with-react-native-inspector">#</a></h3><p>Open the in-app developer menu and choose "Show Inspector". It will bring up an overlay that lets you tap on any UI element and see information about it:</p><p><img src="img/Inspector.gif" alt="React Native Inspector"></p><p>However, when <code>react-devtools</code> is running, Inspector will enter a special collapsed mode, and instead use the DevTools as primary UI. In this mode, clicking on something in the simulator will bring up the relevant components in the DevTools:</p><p><img src="img/ReactDevToolsInspector.gif" alt="React DevTools Inspector Integration"></p><p>You can choose "Hide Inspector" in the same menu to exit this mode.</p><h3><a class="anchor" name="inspecting-component-instances"></a>Inspecting Component Instances <a class="hash-link" href="docs/debugging.html#inspecting-component-instances">#</a></h3><p>When debugging JavaScript in Chrome, you can inspect the props and state of the React components in the browser console.</p><p>First, follow the instructions for debugging in Chrome to open the Chrome console.</p><p>Make sure that the dropdown in the top left corner of the Chrome console says <code>debuggerWorker.js</code>. <strong>This step is essential.</strong></p><p>Then select a React component in React DevTools. There is a search box at the top that helps you find one by name. As soon as you select it, it will be available as <code>$r</code> in the Chrome console, letting you inspect its props, state, and instance properties.</p><p><img src="img/ReactDevToolsDollarR.gif" alt="React DevTools Chrome Console Integration"></p><h2><a class="anchor" name="performance-monitor"></a>Performance Monitor <a class="hash-link" href="docs/debugging.html#performance-monitor">#</a></h2><p>You can enable a performance overlay to help you debug performance problems by selecting "Perf Monitor" in the Developer Menu.</p><span><hr style="margin-top:25px; margin-bottom:25px;">

</span><h1><a class="anchor" name="debugging-in-ejected-apps"></a>Debugging in Ejected Apps <a class="hash-link" href="docs/debugging.html#debugging-in-ejected-apps">#</a></h1><span><div class="banner-crna-ejected" style="margin-top:25px">
  <h3>Projects with Native Code Only</h3>
  <p>
    The remainder of this guide only applies to projects made with <code>react-native init</code>
    or to those made with Create React Native App which have since ejected. For
    more information about ejecting, please see
    the <a href="https://github.com/react-community/create-react-native-app/blob/master/EJECTING.md" target="_blank">guide</a> on
    the Create React Native App repository.
  </p>
</div>

</span><h2><a class="anchor" name="accessing-console-logs"></a>Accessing console logs <a class="hash-link" href="docs/debugging.html#accessing-console-logs">#</a></h2><p>You can display the console logs for an iOS or Android app by using the following commands in a terminal while the app is running:</p><div class="prism language-javascript">$ react<span class="token operator">-</span>native log<span class="token operator">-</span>ios
$ react<span class="token operator">-</span>native log<span class="token operator">-</span>android</div><p>You may also access these through <code>Debug → Open System Log...</code> in the iOS Simulator or by running <code>adb logcat *:S ReactNative:V ReactNativeJS:V</code> in a terminal while an Android app is running on a device or emulator.</p><blockquote><p>If you're using Create React Native App, console logs already appear in the same terminal output as the packager.</p></blockquote><h2><a class="anchor" name="debugging-on-a-device-with-chrome-developer-tools"></a>Debugging on a device with Chrome Developer Tools <a class="hash-link" href="docs/debugging.html#debugging-on-a-device-with-chrome-developer-tools">#</a></h2><blockquote><p>If you're using Create React Native App, this is configured for you already.</p></blockquote><p>On iOS devices, open the file <a href="https://github.com/facebook/react-native/blob/master/Libraries/WebSocket/RCTWebSocketExecutor.m" target="_blank"><code>RCTWebSocketExecutor.m</code></a> and change "localhost" to the IP address of your computer, then select "Debug JS Remotely" from the Developer Menu.</p><p>On Android 5.0+ devices connected via USB, you can use the <a href="http://developer.android.com/tools/help/adb.html" target="_blank"><code>adb</code> command line tool</a> to setup port forwarding from the device to your computer:</p><p><code>adb reverse tcp:8081 tcp:8081</code></p><p>Alternatively, select "Dev Settings" from the Developer Menu, then update the "Debug server host for device" setting to match the IP address of your computer.</p><blockquote><p>If you run into any issues, it may be possible that one of your Chrome extensions is interacting in unexpected ways with the debugger. Try disabling all of your extensions and re-enabling them one-by-one until you find the problematic extension.</p></blockquote><h3><a class="anchor" name="debugging-with-stetho-http-facebook-github-io-stetho-on-android"></a>Debugging with <a href="http://facebook.github.io/stetho/" target="_blank">Stetho</a> on Android <a class="hash-link" href="docs/debugging.html#debugging-with-stetho-http-facebook-github-io-stetho-on-android">#</a></h3><p>Follow this guide to enable Stetho for Debug mode:</p><ol><li><p>In <code>android/app/build.gradle</code>, add these lines in the <code>dependencies</code> section:</p><div class="prism language-gradle"> debugCompile <span class="token string">'com.facebook.stetho:stetho:1.5.0'</span>
 debugCompile <span class="token string">'com.facebook.stetho:stetho-okhttp3:1.5.0'</span></div></li></ol><blockquote><p>The above will configure Stetho v1.5.0. You can check at <a href="http://facebook.github.io/stetho/">http://facebook.github.io/stetho/</a> if a newer version is available.</p></blockquote><ol><li><p>Create the following Java classes to wrap the Stetho call, one for release and one for debug:</p><div class="prism language-java"><span class="token comment" spellcheck="true"> // android/app/src/release/java/com/{yourAppName}/StethoWrapper.java
</span>
 <span class="token keyword">public</span> <span class="token keyword">class</span> <span class="token class-name">StethoWrapper</span> <span class="token punctuation">{</span>

     <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">void</span> <span class="token function">initialize<span class="token punctuation">(</span></span>Context context<span class="token punctuation">)</span> <span class="token punctuation">{</span>
        <span class="token comment" spellcheck="true"> // NO_OP
</span>     <span class="token punctuation">}</span>

     <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">void</span> <span class="token function">addInterceptor<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
        <span class="token comment" spellcheck="true"> // NO_OP
</span>     <span class="token punctuation">}</span>
 <span class="token punctuation">}</span></div><div class="prism language-java"><span class="token comment" spellcheck="true"> // android/app/src/debug/java/com/{yourAppName}/StethoWrapper.java
</span>
 <span class="token keyword">public</span> <span class="token keyword">class</span> <span class="token class-name">StethoWrapper</span> <span class="token punctuation">{</span>
     <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">void</span> <span class="token function">initialize<span class="token punctuation">(</span></span>Context context<span class="token punctuation">)</span> <span class="token punctuation">{</span>
       Stetho<span class="token punctuation">.</span><span class="token function">initializeWithDefaults<span class="token punctuation">(</span></span>context<span class="token punctuation">)</span><span class="token punctuation">;</span>
     <span class="token punctuation">}</span>

     <span class="token keyword">public</span> <span class="token keyword">static</span> <span class="token keyword">void</span> <span class="token function">addInterceptor<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
       OkHttpClient client <span class="token operator">=</span> OkHttpClientProvider<span class="token punctuation">.</span><span class="token function">getOkHttpClient<span class="token punctuation">(</span></span><span class="token punctuation">)</span>
              <span class="token punctuation">.</span><span class="token function">newBuilder<span class="token punctuation">(</span></span><span class="token punctuation">)</span>
              <span class="token punctuation">.</span><span class="token function">addNetworkInterceptor<span class="token punctuation">(</span></span><span class="token keyword">new</span> <span class="token class-name">StethoInterceptor</span><span class="token punctuation">(</span><span class="token punctuation">)</span><span class="token punctuation">)</span>
              <span class="token punctuation">.</span><span class="token function">build<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>

       OkHttpClientProvider<span class="token punctuation">.</span><span class="token function">replaceOkHttpClient<span class="token punctuation">(</span></span>client<span class="token punctuation">)</span><span class="token punctuation">;</span>
     <span class="token punctuation">}</span>
 <span class="token punctuation">}</span></div></li><li><p>Open <code>android/app/src/main/java/com/{yourAppName}/MainApplication.java</code> and replace the original <code>onCreate</code> function:</p></li></ol><div class="prism language-java">  <span class="token keyword">public</span> <span class="token keyword">void</span> <span class="token function">onCreate<span class="token punctuation">(</span></span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
      <span class="token keyword">super</span><span class="token punctuation">.</span><span class="token function">onCreate<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>

      <span class="token keyword">if</span> <span class="token punctuation">(</span>BuildConfig<span class="token punctuation">.</span>DEBUG<span class="token punctuation">)</span> <span class="token punctuation">{</span>      
          StethoWrapper<span class="token punctuation">.</span><span class="token function">initialize<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
          StethoWrapper<span class="token punctuation">.</span><span class="token function">addInterceptor<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
      <span class="token punctuation">}</span>

      SoLoader<span class="token punctuation">.</span><span class="token function">init<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token comment" spellcheck="true">/* native exopackage */</span> <span class="token boolean">false</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token punctuation">}</span></div><ol><li><p>Open the project in Android Studio and resolve any dependency issues. The IDE should guide you through this steps after hovering your pointer over the red lines.</p></li><li><p>Run <code>react-native run-android</code>.</p></li><li><p>In a new Chrome tab, open: <code>chrome://inspect</code>, then click on the 'Inspect device' item next to "Powered by Stetho".</p></li></ol><h2><a class="anchor" name="debugging-native-code"></a>Debugging native code <a class="hash-link" href="docs/debugging.html#debugging-native-code">#</a></h2><p>When working with native code, such as when writing native modules, you can launch the app from Android Studio or Xcode and take advantage of the native debugging features (setting up breakpoints, etc.) as you would in case of building a standard native app.</p></div><div class="docs-prevnext"><a class="docs-prev btn" href="docs/timers.html#content">← Previous</a><a class="docs-next btn" href="docs/performance.html#content">Continue Reading →</a></div><p class="edit-page-block"><a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/Debugging.md">Improve this page</a> by sending a pull request!</p>